dpkg (1.18.21) UNRELEASED; urgency=medium

  [ Updated man pages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Sat, 28 Jan 2017 07:10:21 +0100

dpkg (1.18.20) unstable; urgency=medium

  [ Guillem Jover ]
  * Add a new --no-sign option to dpkg-buildpackage, to make it possible to
    disable all signing in a future-proof way.
  * Make dpkg-buildpackage --unsigned-changes not sign .buildinfo either.
    This breaks the expectations of users and tools, because there was no
    way previously to request no signing at all. Closes: #852822
  * Perl modules:
    - Mask the machine bits for SH and MIPS in the ELF processor flags in
      Dpkg::Shlibs::Objdump. These do not define the ABI, and make the
      objects not match when they should, when looking for shared libraries
      from dpkg-shlibdeps.
    - Encode the ELF ABI as a big-endian byte stream, so that decoding for
      output gives meaningful results.
    - Disable the NFS-unsafe warning on Linux, as using flock() on NFS has
      been safe for some time now. Addresses: #677865 (on Linux)
  * Documentation:
    - Document the Built-For-Profile field in deb-changes(5).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated man pages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Sat, 28 Jan 2017 06:32:53 +0100

dpkg (1.18.19) unstable; urgency=medium

  [ Guillem Jover ]
  * Stop emitting Built-For-Profiles from dpkg-gencontrol. The information
    is already provided in .buildinfo and .changes files, and including it
    in the binary packages makes them unreproducible even when the profile
    used would not alter its contents. Closes: #831524
  * Do not allow empty epochs and revisions in versions. When there's at
    least one colon or one dash, we should expect epoch and revision numbers.
  * Always set SOURCE_DATE_EPOCH in dpkg-buildpackage and dpkg-source. Use