@@ -1,5 +1,11 @@
 dpkg (1.18.21) UNRELEASED; urgency=medium
 
+  [ Guillem Jover ]
+  * Perl modules:
+    - Map alternative or old ELF machine types to canonical ones. We need
+      those to match on the encoded ABI, otherwise dpkg-shlibdeps will not
+      be able to find the objects.
+
   [ Updated man pages translations ]
   * German (Helge Kreutzmann).
 
